<resources>
    <string name="app_name">MovieCatalogSubmission</string>
    <string name="movie_tittle">How to Train Your Dragon: The Hidden World</string>
    <string name="movie_rate">4.7</string>
    <string name="movie_ratediv">/ 10</string>
    <string name="movie_desc">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_detail">Detail</string>
    <string name="date">2019</string>
    <string name="language_eg">English</string>
    <string name="language_es">Spain</string>
    <string name="language_in">Bahasa Indonesia</string>
    <string name="tab_movie">Movies</string>
    <string name="tab_tvshows">Tv Show</string>
    <string name="toolbar_tittle">Movie Catalogs</string>
    <string name="SettingToolbar">Setting</string>
    <string name="Setting_lang">Language</string>

    <string-array name="data_name">
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Robin Hood</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>The Girl in the Spiders Web</item>
        <item>The Mule</item>
        <item>Venom</item>
    </string-array>

    <string-array name="data_description">
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orms half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock and roll band Queen in 1970. Hit songs become instant classics. When Mercurys increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the "succes's" and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccups reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>In Stockholm, Sweden, hacker Lisbeth Salander is hired by Frans Balder, a computer engineer, to retrieve a program that he believes it is too dangerous to exist.</item>
        <item>Earl Stone, a man in his eighties, is broke, alone, and facing foreclosure of his business when he is offered a job that simply requires him to drive. Easy enough, but, unbeknownst to Earl, "he's" just signed on as a drug courier for a Mexican cartel. He does so well that his cargo increases exponentially, and Earl hit the radar of hard-charging DEA agent Colin Bates.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>

    <array name="data_photo">
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_robinhood</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_thegirl</item>
        <item>@drawable/poster_themule</item>
        <item>@drawable/poster_venom</item>
    </array>

    <array name="data_rate">
        <item>3.2</item>
        <item>4.5</item>
        <item>5</item>
        <item>4.5</item>
        <item>4.7</item>
        <item>2.6</item>
        <item>3.5</item>
        <item>4.1</item>
        <item>4.9</item>
        <item>2</item>
    </array>

    <string-array name="data_rate2">
        <item>3.2</item>
        <item>4.5</item>
        <item>5</item>
        <item>4.5</item>
        <item>4.7</item>
        <item>2.6</item>
        <item>3.5</item>
        <item>4.1</item>
        <item>4.9</item>
        <item>2</item>
    </string-array>

    <string-array name="data_date">
        <item>(2019)</item>
        <item>(2018)</item>
        <item>(2019)</item>
        <item>(2018)</item>
        <item>(2019)</item>
        <item>(2018)</item>
        <item>(2018)</item>
        <item>(2018)</item>
        <item>(2018)</item>
        <item>(2018)</item>
    </string-array>

    <array name="tvdata_photo">
        <item>@drawable/poster_arrow</item>
        <item>@drawable/poster_doom_patrol</item>
        <item>@drawable/poster_dragon_ball</item>
        <item>@drawable/poster_gotham</item>
        <item>@drawable/poster_hanna</item>
        <item>@drawable/poster_the_umbrella</item>
        <item>@drawable/poster_iron_fist</item>
        <item>@drawable/poster_naruto_shipudden</item>
        <item>@drawable/poster_the_simpson</item>
        <item>@drawable/poster_family_guy</item>
    </array>

    <string-array name="tvdata_name">
        <item>Arrow</item>
        <item>Doom Patrol</item>
        <item>Dragon Ball</item>
        <item>Gotham</item>
        <item>Hanna</item>
        <item>The Umbrella Academy</item>
        <item>Marvels Iron Fist</item>
        <item>Naruto Shipudden</item>
        <item>The Simpsons</item>
        <item>Family Guy</item>
    </string-array>

    <string-array name="tvdata_date">
        <item>(2012)</item>
        <item>(2019)</item>
        <item>(1986)</item>
        <item>(2014)</item>
        <item>(2019)</item>
        <item>(2019)</item>
        <item>(2017)</item>
        <item>(2007)</item>
        <item>(1989)</item>
        <item>(1999)</item>
    </string-array>

    <string-array name="tvdata_description">
        <item>Spoiled billionaire playboy Oliver Queen is missing and presumed dead when his yacht is lost at sea. He returns five years later a changed man, determined to clean up the city as a hooded vigilante armed with a bow.</item>
        <item>The Doom Patrols members each suffered horrible accidents that gave them superhuman abilities but also left them scarred and disfigured. Traumatized and downtrodden, the team found purpose through The Chief, who brought them together to investigate the weirdest phenomena in existence — and to protect Earth from what they find.</item>
        <item>Long ago in the mountains, a fighting master known as Gohan discovered a strange boy whom he named Goku. Gohan raised him and trained Goku in martial arts until he died. The young and very strong boy was on his own, but easily managed. Then one day, Goku met a teenage girl named Bulma, whose search for the mystical Dragon Balls brought her to Gokus home. Together, they set off to find all seven and to grant her wish.</item>
        <item>Everyone knows the name Commissioner Gordon. He is one of the crime worlds greatest foes, a man whose reputation is synonymous with law and order. But what is known of Gordons story and his rise from rookie detective to Police Commissioner? What did it take to navigate the multiple layers of corruption that secretly ruled Gotham City, the spawning ground of the worlds most iconic villains? And what circumstances created them the larger than life personas who would become Catwoman, The Penguin, The Riddler, Two-Face and The Joker?</item>
        <item>This thriller and coming-of-age drama follows the journey of an extraordinary young girl as she evades the relentless pursuit of an off-book CIA agent and tries to unearth the truth behind who she is. Based on the 2011 Joe Wright film.</item>
        <item>A dysfunctional family of superheroes comes together to solve the mystery of their fathers death, the threat of the apocalypse and more.</item>
        <item>Danny Rand resurfaces 15 years after being presumed dead. Now, with the power of the Iron Fist, he seeks to reclaim his past and fulfill his destiny.</item>
        <item>Naruto Shippuuden is the continuation of the original animated TV series Naruto.The story revolves around an older and slightly more matured Uzumaki Naruto and his quest to save his friend Uchiha Sasuke from the grips of the snake-like Shinobi, Orochimaru. After 2 and a half years Naruto finally returns to his village of Konoha, and sets about putting his ambitions to work, though it will not be easy, as He has amassed a few (more dangerous) enemies, in the likes of the shinobi organization, Akatsuki.</item>
        <item>Set in Springfield, the average American town, the show focuses on the antics and everyday adventures of the Simpson family, Homer, Marge, Bart, Lisa and Maggie, as well as a virtual cast of thousands. Since the beginning, the series has been a pop culture icon, attracting hundreds of celebrities to guest star. The show has also made name for itself in its fearless satirical take on politics, media and American life in general.</item>
        <item>Sick, twisted, politically incorrect and Freakin Sweet animated series featuring the adventures of the dysfunctional Griffin family. Bumbling Peter and long-suffering Lois have three kids. Stewie (a brilliant but sadistic baby bent on killing his mother and taking over the world), Meg (the oldest, and is the most unpopular girl in town) and Chris (the middle kid, he not very bright but has a passion for movies). The final member of the family is Brian - a talking dog and much more than a pet, he keeps Stewie in check whilst sipping Martinis and sorting through his own life issues.</item>
    </string-array>

    <array name="tvdata_rate">
        <item>3.2</item>
        <item>4.5</item>
        <item>5</item>
        <item>4.5</item>
        <item>4.7</item>
        <item>2.6</item>
        <item>3.5</item>
        <item>4.1</item>
        <item>4.9</item>
        <item>2</item>
    </array>

    <string-array name="tvdata_rate2">
        <item>3.2</item>
        <item>4.5</item>
        <item>5</item>
        <item>4.5</item>
        <item>4.7</item>
        <item>2.6</item>
        <item>3.5</item>
        <item>4.1</item>
        <item>4.9</item>
        <item>2</item>
    </string-array>


</resources>
