<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingActivity">

    <include
        layout="@layout/toolbar_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Setting_lang"
            android:textSize="18sp"
            android:textColor="@color/black2"
            android:layout_marginBottom="10dp"/>

        <RadioGroup
            android:id="@+id/rg_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/lg_eg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fontPath="font/latoregular.ttf"
                tools:ignore="MissingPrefix"
                android:text="@string/language_eg" />

            <RadioButton
                android:id="@+id/lg_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fontPath="font/latoregular.ttf"
                tools:ignore="MissingPrefix"
                android:text="@string/language_in" />

            <RadioButton
                android:id="@+id/lg_es"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fontPath="font/latoregular.ttf"
                tools:ignore="MissingPrefix"
                android:text="@string/language_es" />

        </RadioGroup>
    </LinearLayout>

</LinearLayout>