<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/itemClick3"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="15dp">

    <ImageView
        android:id="@+id/iv_tvPoster"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:src="@drawable/poster_iron_fist"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:background="@color/black"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_tvTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_tittle"
            android:textSize="18sp"
            android:textColor="@color/black2"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <RatingBar
                android:id="@+id/ratingBar3"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1.0"
                android:theme="@style/RatingBar"
                android:rating="4.7" />

            <TextView
                android:id="@+id/tv_tvRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_rate"
                android:textStyle="bold"
                android:layout_marginStart="6dp"
                android:textColor="@color/black2"
                android:textSize="12sp" />
        </LinearLayout>



        <TextView
            android:id="@+id/tv_tvDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:textColor="@color/black2"
            android:maxLines="3"
            android:text="@string/movie_desc" />

    </LinearLayout>





</LinearLayout>